--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - Images/dice.png
+      - Images/smile.png
+      - Images/sad.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
